--- a/html/Menu.htm
+++ b/html/Menu.htm
@@ -373,7 +373,8 @@ div {
 <font size=+1><a href="#U0">nanoVNA-H</a> Touchscreen Menu interactive map from <font color=#999900><em>Oct 18 2019</em></font> firmware</font><br>
 <a href="">help is linked by selecting</a> for buttons with underlined text<br>
 tool tips for many buttons are launched by hovering mouse pointer<br>
-<em>some</em> submenus highlight <span style="background-color: #FFFFFF"><font color="black">ACTIVE</font></span> selection on LCD</p>
+<em>some</em> submenus highlight <span style="background-color: #FFFFFF"><font color="black">ACTIVE</font></span> selection on LCD
+&nbsp &nbsp <a href="Wnano.htm">printable version</a></p>
 
 <div class="tree">
 <p>Press control or touch screen for menu</p>
