--- a/html/Wnano.htm
+++ b/html/Wnano.htm
@@ -377,7 +377,7 @@ div {
 tool tips for many buttons are launched by hovering mouse pointer<br>
 
 
-<em>some</em> submenus highlight <span style="background-color: #FFFFFF"><font color="black">ACTIVE</font></span> selection on LCD
+<em>some</em> submenus highlight <span style="background-color: #000000"><font color="white">ACTIVE</font></span> selection on LCD
 
 </p>
 
